# simplebitset

./: Cargo.toml  LICENSE  README.md
benches/: collect.rs  contains.rs  discord.rs  insert.rs  remove.rs
examples/: sixseven.rs
src/: bitset.rs  clear.rs  compatibility.rs  contains.rs  debug.rs  difference.rs  drain.rs  extend.rs  extract_if.rs  from_iter.rs  get.rs  get_or_insert.rs  insert.rs  intersection.rs  into_iter.rs  is_disjoint.rs  is_empty.rs  is_subset.rs  is_superset.rs  iter.rs  len.rs  lib.rs  memes.rs  new.rs  remove.rs  replace.rs  retain.rs  symmetric_difference.rs  take.rs  total_set.rs  union.rs
src/compatibility/: capacity.rs  reserve.rs  shrink_to.rs  shrink_to_fit.rs  try_reserve.rs  with_capacity.rs  with_capacity_and_hasher.rs  with_hasher.rs
