[package]
name = "simplebitset"
description = "Dead simple Rust bitset"
license = "MIT"
homepage = "https://github.com/paulcdejean/simplebitset"
repository = "https://github.com/paulcdejean/simplebitset"
readme = "README.md"
version = "0.2.0"
edition = "2024"
keywords = ["bitset"]

[dependencies]

[features]
default = ["copy"]
# Determines if BitSet implements Copy or not.
copy = []

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "insert"
harness = false
