[package]
name = "simplebitset"
description = "Dead simple Rust bitset"
license = "MIT"
homepage = "https://github.com/paulcdejean/simplebitset"
repository = "https://github.com/paulcdejean/simplebitset"
readme = "README.md"
version = "0.3.0"
edition = "2024"
resolver = "3"
keywords = ["bitset"]

[dependencies]

[features]
default = ["copy"]
# Determines if BitSet implements Copy or not.
copy = []
# Determines if noop methods for compatibility with hashmap are enabled.
compatibility-methods = []

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "contains"
harness = false

[[bench]]
name = "remove"
harness = false
